...
    "description":  "Label for button dismissing dialog shown on first upgrade from the legacy Zulip app."
  },
  "chooseAccountPageTitle": "Choose account",
  "@chooseAccountPageTitle": {
    "description": "Title for the page to choose between Zulip accounts."
  },
  "settingsPageTitle": "Settings",
  "@settingsPageTitle": {
    "description": "Title for the settings page."
  },
  "switchAccountButton": "Switch account",
  "@switchAccountButton": {
    "description": "Label for main-menu button leading to the choose-account page."
...
    "description": "Label for the 'Log out' button on a confirmation dialog for logging out."
  },
  "chooseAccountButtonAddAnAccount": "Add an account",
  "@chooseAccountButtonAddAnAccount": {
    "description": "Label for ChooseAccountPage button to add an account"
  },
  "callsPageTitle": "Calls",
  "@callsPageTitle": {
    "description": "Title for the calls page."
  },
  "chatsPageTitle": "Chats",
  "@chatsPageTitle": {
    "description": "Title for the chats page."
  },
  "callLogTabTitle": "Call log",
  "@callLogTabTitle": {
    "description": "Title for the call log tab."
...
